--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 implementation of a modern database system?
                 Advances in deep learning have achieved "super-human"
                 performances in various domains due to the confluence of
-                improved compute, an abundance of data, and expressive
+                specialized compute, abundant data, and expressive
                 architectures.  In this project, we investigate how machine learning can
                     help improve or design better data systems.</p>
 
