--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>ML+DBMS</title>
+    <title>ML-powered Database Systems</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1><strong>Machine Learning + Data Systems</strong></h1>
+                <h1><strong>ML-powered Database Systems</strong></h1>
             </div>
         </div>
 
